# EdgeDetection

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
docs/: development_plan.md  next_step.md  updates.md
inputs_old/: README.md
scripts/: aggregate_tb_metrics.py  compare_edge_maps_bpr_f1.py  compare_edge_maps_pixel_metrics.py  compare_saved_edges_bpr.py  compute_convergence_speed.py  compute_ep_len_mean_030501.py  compute_reward_mean_030501.py  compute_training_episode_metrics.py  convert_eval_json_to_csv.py  evaluate_agents.py  evaluate_hed_thresholds.py  export_agent_edges.py  export_gt_to_png.py  plot_episode_rewards_0311.py  plot_tb_rollout_rewards_0305.py  run_hed_edges.py  simulate_env.py  train_dqn.py  train_ppo.py  tune_hyperparams.py
src/hed_rl/: __init__.py
src/hed_rl/envs/: __init__.py  hed_postprocess_env.py
src/hed_rl/pipeline/: __init__.py  hed_inference.py
src/hed_rl/training/: callbacks.py
