[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hed-rl"
version = "0.1.0"
description = "Prototype RL environment for HED post-processing parameter optimization"
readme = "README.md"
authors = [{ name = "Project Team" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
core = [
    "gymnasium>=0.29.1",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "stable-baselines3>=2.2.0",
    "torch>=2.3.0",
    "ray[tune]>=2.9.0",
]
docs = ["pypdf>=4.0.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
